# Air-Condition-Monitoring

./: .gitignore  CMakeLists.txt  README.md
CMake/: BSECConfig.cmake
include/: constants.h
src/: main.cpp
